--- a/public/index.html
+++ b/public/index.html
@@ -5,25 +5,46 @@
     <link rel="icon" href="%PUBLIC_URL%/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="An Initiative by Entrepreneurship Cell VIT"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+    <meta name="author" content="Vinayak Gupta" />
+    <meta name="language" content="en" />
+    <meta name="url" content="https://expo.ecellvit.com" />
+    <meta name="category" content="Event" />
+    <meta name="coverage" content="Worldwide" />
+    <meta name="rating" content="General" />
+    <meta name="og:email" content="contact@devsoc.codechefvit.com" />
+    <meta name="og:phone_number" content="+917014531554" />
+    <meta name="og:country-name" content="India" />
+    <meta name="og:region" content="Vellore" />
+    <meta name="og:site_name" content="Internship Expo by E-Cell VIT" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Internship Expo by E-Cell VIT" />
+    <meta
+      property="og:description"
+      content="An Initiative by Entrepreneurship Cell VIT"
+    />
+    <meta property="og:url" content="https://expo.ecellvit.com" />
+    <meta property="og:site_name" content="Internship Expo by E-Cell VIT" />
+    <meta name="twitter:card" content="website" />
+    <meta name="twitter:site" content="Internship Expo by E-Cell VIT" />
+    <meta name="twitter:title" content="Internship Expo by E-Cell VIT" />
+    <meta
+      name="twitter:description"
+      content="An Initiative by Entrepreneurship Cell VIT"
+    />
+    <meta name="twitter:creator" content="@codechefvit" />
+    <meta itemprop="name" content="Internship Expo by E-Cell VIT" />
+    <meta
+      itemprop="description"
+      content="An Initiative by Entrepreneurship Cell VIT"
+    />
+    <link rel="canonical" href="https://expo.ecellvit.com" />
     <title>Internship Expo Portal</title>
   </head>
   <body>
